[package]
name = "mds"
version = "0.1.0"
authors = ["ttang <d_ttang@163.com>"]
edition = "2018"


[dependencies]
byteorder = "1.4.3"
bytes = "1.0.1"
futures = "0.3.14"
hyper = { version = "0.14.5", features = ["full"] }
prost = "0.7.0"
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = "0.1.5"
tokio-util = { version = "0.6.5", features = ["full"] }

[build-dependencies]
prost-build = "0.7.0"